--- a/lcsc-ding-core/build.gradle
+++ b/lcsc-ding-core/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group:'commons-io',name:'commons-io',version:'2.5'
+    compile group:'com.alibaba',name:'fastjson',version:'1.2.47'
+    compile group:'commons-collections',name:'commons-collections',version:'3.2.2'
 // spring boot
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVar"
     testCompile "org.springframework.boot:spring-boot-starter-test:$springBootVar"
