--- a/lcsc-ding-service/build.gradle
+++ b/lcsc-ding-service/build.gradle
@@ -12,5 +12,8 @@ repositories {
 
 dependencies {
     compile(project(':lcsc-ding-core'))
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    compile group: 'joda-time', name: 'joda-time', version: '2.10.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
