--- a/lcsc-ding-core/build.gradle
+++ b/lcsc-ding-core/build.gradle
@@ -15,15 +15,20 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group:'commons-io',name:'commons-io',version:'2.5'
-    compile group:'com.alibaba',name:'fastjson',version:'1.2.47'
-    compile group:'commons-collections',name:'commons-collections',version:'3.2.2'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
+    compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
 // spring boot
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVar"
     testCompile "org.springframework.boot:spring-boot-starter-test:$springBootVar"
-    compile fileTree(dir:'lib',includes:['*jar'])
+    compile fileTree(dir: 'lib', includes: ['*jar'])
 
     // https://mvnrepository.com/artifact/joda-time/joda-time
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    provided group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+
 
 }
