--- a/lcsc-ding-service/build.gradle
+++ b/lcsc-ding-service/build.gradle
@@ -1,8 +1,5 @@
-plugins {
-    id 'java'
-}
 
-version 'unspecified'
+version = '1.0.0'
 
 sourceCompatibility = 1.8
 archivesBaseName = 'lcsc-ding-service'
