--- a/lcsc-ding-web/build.gradle
+++ b/lcsc-ding-web/build.gradle
@@ -1,3 +1,11 @@
+apply plugin: 'org.springframework.boot'
+archivesBaseName = 'lcsc-ding-web'
+apply plugin: 'war'
+version = '1.0.0'
+ext {
+    springBootVar = '1.4.5.RELEASE'
+}
+bootRepackage.enabled = false
 buildscript {
     repositories {
         mavenLocal()
@@ -10,13 +18,13 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.5.RELEASE")
     }
 }
-apply plugin: 'org.springframework.boot'
-archivesBaseName = 'lcsc-ding-web'
+
 
 dependencies {
-    compile(project(':lcsc-ding-core'))
     compile(project(':lcsc-ding-service'))
-
+    compile "org.springframework.boot:spring-boot-starter-web:$springBootVar"
+    providedCompile("org.springframework.boot:spring-boot-starter-tomcat")
+    testCompile "org.springframework.boot:spring-boot-starter-test:$springBootVar"
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
